Small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera!!</title>
 </head>
 <body>
-<h1>Hello Sergiñoooo papuuu</h1>
+<h1>Hello Sergiñoooo papuuu<br></h1>
+<h2>It's a great course!</h2>
 </body>
 </html>
