--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Hello Sergiñoooo papuuu<br></h1>
-<h2>It's a great course!</h2>
+<h2>It's a great course! Like you pretty</h2>
 </body>
 </html>
